Add School Performance content and citations to screen-time page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -156,6 +156,10 @@ import "../styles/global.css";
                                 class="link link-hover text-sm"
                                 href="/harney-digital-wellness/mindful-breaks">Mindful Breaks</a
                             >
+                            <a
+                                class="link link-hover text-sm"
+                                href="/harney-digital-wellness/sources">Sources &amp; Further Reading</a
+                            >
                         </div>
                     </div>
 
